# gum

./: .env.example  .gitignore  README.md  mkdocs.yml  pyproject.toml
docs/: index.md
docs/api-reference/: gumbo.md  models.md
docs/specs/: 01-commitment-deadline-radar.md
docs/tutorials/: gumbo.md  mcp.md
gum/: __init__.py  agenda.py  api.py  batcher.py  cli.py  context.py  daemon.py  db_utils.py  executor.py  gum.py  gumbo.py  llm.py  mcp_server.py  models.py  sanitize.py  schemas.py  tray.py
gum/observers/: __init__.py  observer.py  screen.py
gum/prompts/: gum.py  gumbo.py  screen.py
gum/static/: gumbo.html  review.html
scripts/: daily_summary.py  verify_shutdown_unload.py
tests/: test_agenda.py  test_api_execute.py  test_api_suggestions.py  test_blacklist.py  test_cli_agenda.py  test_cli_execute.py  test_context.py  test_executor.py  test_gumbo.py  test_mcp_server.py  test_memory_curation.py  test_rehydrate.py  test_sanitize_chunking.py  test_sanitize_dates.py  test_sanitize_fragment.py  test_temporal_observations.py  test_temporal_propositions.py
