[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta" 

[project]
name = "gum-ai"
version = "0.1.11"
readme = "README.md"
authors = [{ name = "Omar Shaikh", email = "oshaikh13@gmail.com" }]
license = {text = "MIT"}
dependencies = [
    "pillow",
    "mss",
    "pynput",
    "shapely",
    "pyobjc-framework-Quartz",
    "openai>=1.0.0",
    "SQLAlchemy>=2.0.0",
    "pydantic>=2.0.0",
    "sqlalchemy-utils>=0.41.0",
    "python-dotenv>=1.0.0",
    "scikit-learn",
    "aiosqlite",
    "greenlet",
    "persist-queue",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0"
]
requires-python = ">=3.10"

[project.optional-dependencies]
calendar = [
    "aiohttp>=3.9.0",
    "ics>=0.7.2"
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
    "mkdocstrings>=0.24.0",
    "mkdocstrings-python>=1.7.0"
]

[project.scripts]
gum = "gum.cli:cli"

[project.urls]
"Homepage" = "https://github.com/GeneralUserModels/gum"